--- a/employee_salary.html
+++ b/employee_salary.html
@@ -94,6 +94,9 @@
       background-color: #4caf50;
       color: white;
     }
+    .salary-table th:last-child{
+        background-color: rgb(0, 153, 255);
+    }
 
     .salary-table tr:nth-child(even) {
       background-color: #f9f9f9;
